# naive-linalg-utils

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_example.cpp  bench_hand_optim.cpp  benchmarks.cpp
bench/optim/: CMakeLists.txt  hand_optimized.c  hand_optimized.h
cmake/: FindGBench.cmake  common.cmake
scripts/: cc_benchmark.slurm
src/: CMakeLists.txt  naivelinalg.c  naivelinalg.h
test/: CMakeLists.txt  gtest_tests.cpp  test.c
